--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyCA3RtXTzImHwIlbuxODp1rDIdXkVn0NP4" />
 
         <activity
             android:name=".MapsActivity"
